--- a/P009176.opf/layers/v001/Pagination.yml
+++ b/P009176.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 177ef97e7eff443fb3d9f61ddf9af8ee
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   5699380dbbb048bd8dee5acaa15572de:
