--- a/P009176.opf/meta.yml
+++ b/P009176.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009176
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:26:39.367521
 source_metadata:
   id: bdr:W1KG9285
   title: གཅོད་ཡུལ་ཉོན་མོངས་ཞི་བྱེད་ཀྱི་བཀའ་གཏེར་བླ་མ་བརྒྱུད་པའི་རྣམ་ཐར་བྱིན་རླབས་གཏེར་མཚོ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 138
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessRestrictedByTbrc
+  restrictedInChina: false
